--- a/app/src/main/res/layout/activity_driver_chat.xml
+++ b/app/src/main/res/layout/activity_driver_chat.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DriverChatActivity"
-    android:orientation="vertical">
+    >
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -54,12 +54,15 @@
                 android:layout_margin="8dp" />
         </LinearLayout>
     </ScrollView>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:layout_gravity="bottom">
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -81,5 +84,6 @@
                 android:backgroundTint="@android:color/transparent"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
 
