--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,37 +11,35 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ABER"
+        android:text="@string/aber"
         android:fontFamily="@font/queensidesmedium"
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
-        android:textSize="65dp"
+        android:textSize="65sp"
         android:textColor="@color/black"/>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="30dp"
         android:layout_marginHorizontal="15dp"
-        app:cardElevation="2dp">
+        app:cardElevation="4dp"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <TextView
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Email"
+                android:text="@string/email"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:padding="5dp"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginBottom="5dp"
-                />
+                android:layout_marginBottom="5dp"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -58,36 +56,32 @@
                     android:hint="@string/email"
                     app:hintEnabled="false"
                     >
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/email_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="top"
-                    android:hint="@string/email"
-                    android:drawableLeft="@drawable/baseline_email_24"
-                    android:background="@drawable/custom_edit_text"
-                    android:padding="10dp"
-                    android:drawablePadding="5dp"
-                    android:textSize="18sp"
-                    android:textColor="@color/black"
-                    android:minLines="1"
-                    android:textCursorDrawable="@color/black"
-
-                    />
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/email_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="top"
+                        android:hint="@string/email"
+                        android:drawableLeft="@drawable/baseline_email_24"
+                        android:background="@drawable/custom_edit_text"
+                        android:padding="10dp"
+                        android:drawablePadding="5dp"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:minLines="1"
+                        android:textCursorDrawable="@color/black" />
                 </com.google.android.material.textfield.TextInputLayout>
-
             </androidx.cardview.widget.CardView>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Password"
+                android:text="@string/password"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:padding="5dp"
                 android:layout_marginHorizontal="19dp"
-                android:layout_marginBottom="5dp"
-                />
+                android:layout_marginVertical="5dp"/>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -103,22 +97,22 @@
                     android:id="@+id/password_layout_text"
                     app:hintEnabled="false"
                     >
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/password_edit_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/password_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
 
-                    android:background="@drawable/custom_edit_text"
-                    android:padding="10dp"
-                    android:drawableLeft="@drawable/baseline_lock_24"
-                    android:drawablePadding="5dp"
-                    android:textSize="18sp"
-                    android:hint="@string/password"
-                    android:inputType="textPassword"
-                    android:minLines="1"
-                    android:textColor="@color/black"
-                    android:textCursorDrawable="@color/black"
-                    />
+                        android:background="@drawable/custom_edit_text"
+                        android:padding="10dp"
+                        android:drawableLeft="@drawable/baseline_lock_24"
+                        android:drawablePadding="5dp"
+                        android:textSize="18sp"
+                        android:hint="@string/password"
+                        android:inputType="textPassword"
+                        android:minLines="1"
+                        android:textColor="@color/black"
+                        android:textCursorDrawable="@color/black"
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.cardview.widget.CardView>
@@ -126,36 +120,48 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginVertical="28dp"
-                android:text="Login" />
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="32dp"
+                android:text="@string/login"
+                app:backgroundTint="@color/secondary_stroke_blue"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_horizontal"
-                android:layout_marginBottom="40dp">
+                android:layout_marginTop="-20dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Don't have an account?"
-                    android:textStyle="italic"
-                    android:textSize="22sp"/>
+                    android:text="@string/forgot_your_password"
+                    android:fontFamily="@font/instagramsansregular"
+                    />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:text="Register"
-                    android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:onClick="onClickRegister">
-
-                </TextView>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:layout_marginVertical="10dp">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/register_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    app:strokeColor="@color/secondary_stroke_blue"
+                    app:cornerRadius="20dp"
+                    android:text="Create new account"
+                    android:layout_marginHorizontal="16dp"
+                    android:textColor="@color/secondary_stroke_blue"
+                    android:textAllCaps="false"
+                    android:onClick="onClickRegister"/>
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
