--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_black">#56000000</color>
     <color name="light_dark_black">#C1000000</color>
     <color name="right_chat_blue">#405DE6</color>
+    <color name="secondary_stroke_blue">#405DE6</color>
 </resources>
