--- a/app/src/main/res/layout/fragment_main_profile.xml
+++ b/app/src/main/res/layout/fragment_main_profile.xml
@@ -97,7 +97,7 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/history"
+                    android:id="@+id/settings"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
@@ -121,7 +121,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="History"
+                            android:text="@string/settings"
                             android:layout_marginLeft="8dp"
                             android:layout_weight="1"/>
                         <ImageView
