--- a/app/src/main/res/layout/fragment_confirm_booking.xml
+++ b/app/src/main/res/layout/fragment_confirm_booking.xml
@@ -38,7 +38,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginTop="24dp"
-                    android:text="Destination"
+                    android:text="Pick Up"
                     android:textSize="26sp"
                     android:textStyle="bold" />
 
@@ -141,7 +141,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginTop="24dp"
-                    android:text="Home"
+                    android:text="Home (Destination)"
                     android:textSize="26sp"
                     android:textStyle="bold" />
 
@@ -309,47 +309,93 @@
                     app:cardElevation="4dp"
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginBottom="30dp">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="8dp">
+                        android:orientation="vertical">
 
-                        <RadioGroup
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1">
-                            <RadioButton
-                                android:layout_width="wrap_content"
+                            android:orientation="vertical"
+                            android:padding="8dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/card"
-                                android:text="Card"
-                                android:textSize="16sp"
-                                android:textStyle="bold"/>
-                            <RadioButton
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/cash"
-                                android:text="Cash"
-                                android:textSize="16sp"
-                                android:textStyle="bold"/>
-                        </RadioGroup>
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:text="Amount: "
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:gravity="center_vertical"/>
+
+                                <TextView
+                                    android:id="@+id/amount"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:text="100000"
+                                    android:layout_weight="1"
+                                    android:gravity="center_vertical">
+
+                                </TextView>
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:text="VND"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"
+                                    android:layout_marginEnd="16dp"
+                                    android:gravity="center_vertical"/>
+                            </LinearLayout>
+                        </LinearLayout>
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
-                            <ImageView
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
-                                android:background="@android:color/transparent"
-                                android:padding="8dp"
-                                android:src="@drawable/ic_chevron_right" />
-                            <ImageView
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
-                                android:background="@android:color/transparent"
-                                android:padding="8dp"
-                                android:src="@drawable/ic_chevron_right" />
+                            android:orientation="horizontal"
+                            android:padding="8dp">
+
+                            <RadioGroup
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1">
+                                <RadioButton
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/card"
+                                    android:text="Card"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"/>
+                                <RadioButton
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/cash"
+                                    android:text="Cash"
+                                    android:textSize="16sp"
+                                    android:textStyle="bold"/>
+                            </RadioGroup>
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+                                <ImageView
+                                    android:layout_width="50dp"
+                                    android:layout_height="50dp"
+                                    android:background="@android:color/transparent"
+                                    android:padding="8dp"
+                                    android:src="@drawable/ic_chevron_right" />
+                                <ImageView
+                                    android:layout_width="50dp"
+                                    android:layout_height="50dp"
+                                    android:background="@android:color/transparent"
+                                    android:padding="8dp"
+                                    android:src="@drawable/ic_chevron_right" />
+                            </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
