--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,20 +55,14 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="5dp"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardElevation="4dp"
-                app:cardCornerRadius="30dp"
-                android:background="@drawable/custom_edit_text"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="8dp">
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/email_layout_text"
                     android:hint="@string/email"
                     app:hintEnabled="false"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="8dp"
                     >
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/email_edit_text"
@@ -77,7 +71,7 @@
                         android:gravity="top"
                         android:hint="@string/email"
                         android:drawableLeft="@drawable/baseline_email_24"
-                        android:background="@drawable/custom_edit_text"
+                        android:background="@drawable/edittext_background"
                         android:padding="10dp"
                         android:drawablePadding="5dp"
                         android:textSize="18sp"
@@ -85,7 +79,7 @@
                         android:minLines="1"
                         android:textCursorDrawable="@color/black" />
                 </com.google.android.material.textfield.TextInputLayout>
-            </androidx.cardview.widget.CardView>
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -97,26 +91,22 @@
                 android:layout_marginHorizontal="19dp"
                 android:layout_marginVertical="5dp"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardElevation="4dp"
-                app:cardCornerRadius="30dp"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginBottom="16dp">
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/password"
                     android:id="@+id/password_layout_text"
                     app:hintEnabled="false"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="16dp"
                     >
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/password_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
 
-                        android:background="@drawable/custom_edit_text"
+                        android:background="@drawable/edittext_background"
                         android:padding="10dp"
                         android:drawableLeft="@drawable/baseline_lock_24"
                         android:drawablePadding="5dp"
@@ -129,7 +119,6 @@
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
-            </androidx.cardview.widget.CardView>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/login_button"
