--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -181,6 +181,7 @@
                     android:gravity="center"
                     android:paddingBottom="5dp"/>
                 <ImageView
+                    android:id="@+id/sign_in_with_google"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@drawable/ic_google_sign_in"
