--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/avatar"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:src="@drawable/ic_profile_avatar" />
+                android:src="@drawable/ic_avatar160" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/upload_button"
